// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should close page skeleton if not e2e 1`] = `
<DocumentFragment>
  <main
    data-testid="Main"
  >
    <div
      class="Toastify"
    />
    <div
      class="emotion-cache-0"
      data-testid="RouterView__wrapper"
    >
      <div
        class="emotion-cache-1v4rx69"
      >
        <nav
          aria-labelledby="main menu"
          class="emotion-cache-97i12m"
        >
          <div
            class="relative flex h-21"
          >
            <div
              class="flex flex-1 px-8 sm:ml-12"
            >
              <div
                class="my-auto flex items-center"
              >
                <button
                  class="my-auto mr-4 flex h-11 w-11 cursor-pointer items-center justify-center rounded-xl bg-theme-primary-600 text-white outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
                  data-testid="NavigationBarLogo--button"
                  type="button"
                >
                  <span
                    class="relative"
                  >
                    <svg
                      height="28"
                    >
                      payvo-logo.svg
                    </svg>
                  </span>
                </button>
                <span
                  class="text-lg uppercase"
                >
                  <strong>
                    ARK
                  </strong>
                  Vault
                </span>
              </div>
            </div>
          </div>
        </nav>
        <div
          class="flex flex-1 flex-col"
        >
          <div
            class="-mt-5 flex flex-1 flex-col text-center md:mt-0 md:justify-center emotion-cache-ycib48"
          >
            <div
              class="mx-auto px-8 md:px-10 lg:container"
            >
              <div
                class="mx-auto hidden w-96 md:block"
              >
                <svg>
                  welcome-banner-light.svg
                </svg>
              </div>
              <div
                class="mx-auto md:mt-8"
              >
                <h2
                  class="mx-4 text-2xl font-bold"
                >
                  Select Profile
                </h2>
                <p
                  class="text-base text-theme-secondary-text"
                >
                  Choose from an existing Profile below or create a new Profile to get started.
                </p>
                <div
                  class="mt-6 flex justify-center md:mt-8"
                >
                  <div
                    class="gap-5 md:grid-cols-3 grid grid-cols-2"
                  >
                    <div
                      class="h-40 w-36 leading-tight sm:w-40"
                    >
                      <button
                        class="emotion-cache-116zvw2"
                        data-testid="Card"
                        type="button"
                      >
                        <div
                          class="mx-auto flex h-full flex-col items-center justify-center"
                        >
                          <div
                            class="relative"
                          >
                            <div
                              class="shrink-0 emotion-cache-11ohc3q"
                              data-testid="Avatar"
                            >
                              <div
                                class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                              >
                                <img
                                  alt="John Doe"
                                  data-testid="ProfileAvatar__svg"
                                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                                  title="John Doe"
                                />
                                <span
                                  class="absolute font-semibold text-white"
                                >
                                  JO
                                </span>
                              </div>
                            </div>
                          </div>
                          <span
                            class="text-theme-primary-text mt-3 max-w-32 truncate font-semibold"
                          >
                            John Doe
                          </span>
                        </div>
                        <div
                          class="absolute -top-1 -right-1 m-4 flex items-center space-x-1"
                        >
                          <div
                            class="static sm:relative"
                          >
                            <span
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="flex w-4 justify-center overflow-hidden"
                              >
                                <div
                                  class="cursor-pointer p-1 text-theme-primary-300 transition-colors duration-200 hover:text-theme-primary-400 dark:text-theme-secondary-600 dark:hover:text-theme-secondary-200 emotion-cache-1i4b0eq"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    ellipsis-vertical.svg
                                  </svg>
                                </div>
                              </div>
                            </span>
                          </div>
                        </div>
                      </button>
                    </div>
                    <div
                      class="h-40 w-36 leading-tight sm:w-40"
                    >
                      <button
                        class="emotion-cache-116zvw2"
                        data-testid="Card"
                        type="button"
                      >
                        <div
                          class="mx-auto flex h-full flex-col items-center justify-center"
                        >
                          <div
                            class="relative"
                          >
                            <div
                              class="shrink-0 emotion-cache-11ohc3q"
                              data-testid="Avatar"
                            >
                              <div
                                class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                              >
                                <img
                                  alt="Jane Doe"
                                  data-testid="ProfileAvatar__svg"
                                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(233, 30, 99)\\"/><circle r=\\"60\\" cx=\\"50\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"30\\" fill=\\"rgb(63, 81, 181)\\"/></svg>"
                                  title="Jane Doe"
                                />
                                <span
                                  class="absolute font-semibold text-white"
                                >
                                  JA
                                </span>
                              </div>
                            </div>
                            <span
                              class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent mr-2 mb-2 border-theme-background bg-theme-background text-theme-secondary-900 dark:text-theme-secondary-600 emotion-cache-1jfmq7q"
                            >
                              <div
                                class="emotion-cache-1i4b0eq"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  lock.svg
                                </svg>
                              </div>
                              <span />
                            </span>
                          </div>
                          <span
                            class="text-theme-primary-text mt-3 max-w-32 truncate font-semibold"
                          >
                            Jane Doe
                          </span>
                        </div>
                        <div
                          class="absolute -top-1 -right-1 m-4 flex items-center space-x-1"
                        >
                          <div
                            class="static sm:relative"
                          >
                            <span
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="flex w-4 justify-center overflow-hidden"
                              >
                                <div
                                  class="cursor-pointer p-1 text-theme-primary-300 transition-colors duration-200 hover:text-theme-primary-400 dark:text-theme-secondary-600 dark:hover:text-theme-secondary-200 emotion-cache-1i4b0eq"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    ellipsis-vertical.svg
                                  </svg>
                                </div>
                              </div>
                            </span>
                          </div>
                        </div>
                      </button>
                    </div>
                    <div
                      class="group h-40 leading-tight sm:w-40 w-36"
                    >
                      <button
                        class="emotion-cache-10zh490"
                        data-testid="Card"
                        type="button"
                      >
                        <div
                          class="mx-auto flex h-full flex-col items-center justify-center"
                        >
                          <div>
                            <div
                              class="border-theme-primary-600 text-theme-primary-600 group-hover:border-white group-hover:text-white ring-theme-background duration-200 emotion-cache-3q6q5z"
                            >
                              <div
                                class="emotion-cache-v0ob3f"
                                height="16"
                                width="16"
                              >
                                <svg>
                                  plus.svg
                                </svg>
                              </div>
                            </div>
                          </div>
                          <span
                            class="mt-3 max-w-32 truncate font-semibold text-theme-primary-600 transition-colors group-hover:text-white"
                          >
                            Create
                          </span>
                        </div>
                        <div
                          class="absolute -top-1 -right-1 m-4 flex items-center space-x-1"
                        />
                      </button>
                    </div>
                  </div>
                </div>
                <p
                  class="mt-8 text-base text-theme-secondary-text md:mt-16"
                >
                  <span>
                    Exported a Profile before? 
                  </span>
                  <a
                    class="ring-focus group inline-block emotion-cache-15tcy38"
                    data-ring-focus-margin="-m-1"
                    data-testid="Link"
                    href="#/profiles/import"
                  >
                    <span
                      class="emotion-cache-1y2194z"
                    >
                      Import it here.
                    </span>
                  </a>
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`App should not migrate profiles 1`] = `
<DocumentFragment>
  <main
    data-testid="Main"
  >
    <div
      class="Toastify"
    />
    <div
      class="emotion-cache-0"
      data-testid="RouterView__wrapper"
    >
      <div
        class="emotion-cache-1v4rx69"
      >
        <nav
          aria-labelledby="main menu"
          class="emotion-cache-97i12m"
        >
          <div
            class="relative flex h-21"
          >
            <div
              class="flex flex-1 px-8 sm:ml-12"
            >
              <div
                class="my-auto flex items-center"
              >
                <button
                  class="my-auto mr-4 flex h-11 w-11 cursor-pointer items-center justify-center rounded-xl bg-theme-primary-600 text-white outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
                  data-testid="NavigationBarLogo--button"
                  type="button"
                >
                  <span
                    class="relative"
                  >
                    <svg
                      height="28"
                    >
                      payvo-logo.svg
                    </svg>
                  </span>
                </button>
                <span
                  class="text-lg uppercase"
                >
                  <strong>
                    ARK
                  </strong>
                  Vault
                </span>
              </div>
            </div>
          </div>
        </nav>
        <div
          class="flex flex-1 flex-col"
        >
          <div
            class="-mt-5 flex flex-1 flex-col text-center md:mt-0 md:justify-center emotion-cache-ycib48"
          >
            <div
              class="mx-auto px-8 md:px-10 lg:container"
            >
              <div
                class="mx-auto hidden w-96 md:block"
              >
                <svg>
                  welcome-banner-light.svg
                </svg>
              </div>
              <div
                class="mx-auto md:mt-8"
              >
                <h2
                  class="mx-4 text-2xl font-bold"
                >
                  Select Profile
                </h2>
                <p
                  class="text-base text-theme-secondary-text"
                >
                  Choose from an existing Profile below or create a new Profile to get started.
                </p>
                <div
                  class="mt-6 flex justify-center md:mt-8"
                >
                  <div
                    class="gap-5 md:grid-cols-3 grid grid-cols-2"
                  >
                    <div
                      class="h-40 w-36 leading-tight sm:w-40"
                    >
                      <button
                        class="emotion-cache-116zvw2"
                        data-testid="Card"
                        type="button"
                      >
                        <div
                          class="mx-auto flex h-full flex-col items-center justify-center"
                        >
                          <div
                            class="relative"
                          >
                            <div
                              class="shrink-0 emotion-cache-11ohc3q"
                              data-testid="Avatar"
                            >
                              <div
                                class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                              >
                                <img
                                  alt="John Doe"
                                  data-testid="ProfileAvatar__svg"
                                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                                  title="John Doe"
                                />
                                <span
                                  class="absolute font-semibold text-white"
                                >
                                  JO
                                </span>
                              </div>
                            </div>
                          </div>
                          <span
                            class="text-theme-primary-text mt-3 max-w-32 truncate font-semibold"
                          >
                            John Doe
                          </span>
                        </div>
                        <div
                          class="absolute -top-1 -right-1 m-4 flex items-center space-x-1"
                        >
                          <div
                            class="static sm:relative"
                          >
                            <span
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="flex w-4 justify-center overflow-hidden"
                              >
                                <div
                                  class="cursor-pointer p-1 text-theme-primary-300 transition-colors duration-200 hover:text-theme-primary-400 dark:text-theme-secondary-600 dark:hover:text-theme-secondary-200 emotion-cache-1i4b0eq"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    ellipsis-vertical.svg
                                  </svg>
                                </div>
                              </div>
                            </span>
                          </div>
                        </div>
                      </button>
                    </div>
                    <div
                      class="h-40 w-36 leading-tight sm:w-40"
                    >
                      <button
                        class="emotion-cache-116zvw2"
                        data-testid="Card"
                        type="button"
                      >
                        <div
                          class="mx-auto flex h-full flex-col items-center justify-center"
                        >
                          <div
                            class="relative"
                          >
                            <div
                              class="shrink-0 emotion-cache-11ohc3q"
                              data-testid="Avatar"
                            >
                              <div
                                class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                              >
                                <img
                                  alt="Jane Doe"
                                  data-testid="ProfileAvatar__svg"
                                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(233, 30, 99)\\"/><circle r=\\"60\\" cx=\\"50\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"30\\" fill=\\"rgb(63, 81, 181)\\"/></svg>"
                                  title="Jane Doe"
                                />
                                <span
                                  class="absolute font-semibold text-white"
                                >
                                  JA
                                </span>
                              </div>
                            </div>
                            <span
                              class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent mr-2 mb-2 border-theme-background bg-theme-background text-theme-secondary-900 dark:text-theme-secondary-600 emotion-cache-1jfmq7q"
                            >
                              <div
                                class="emotion-cache-1i4b0eq"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  lock.svg
                                </svg>
                              </div>
                              <span />
                            </span>
                          </div>
                          <span
                            class="text-theme-primary-text mt-3 max-w-32 truncate font-semibold"
                          >
                            Jane Doe
                          </span>
                        </div>
                        <div
                          class="absolute -top-1 -right-1 m-4 flex items-center space-x-1"
                        >
                          <div
                            class="static sm:relative"
                          >
                            <span
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="flex w-4 justify-center overflow-hidden"
                              >
                                <div
                                  class="cursor-pointer p-1 text-theme-primary-300 transition-colors duration-200 hover:text-theme-primary-400 dark:text-theme-secondary-600 dark:hover:text-theme-secondary-200 emotion-cache-1i4b0eq"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    ellipsis-vertical.svg
                                  </svg>
                                </div>
                              </div>
                            </span>
                          </div>
                        </div>
                      </button>
                    </div>
                    <div
                      class="group h-40 leading-tight sm:w-40 w-36"
                    >
                      <button
                        class="emotion-cache-10zh490"
                        data-testid="Card"
                        type="button"
                      >
                        <div
                          class="mx-auto flex h-full flex-col items-center justify-center"
                        >
                          <div>
                            <div
                              class="border-theme-primary-600 text-theme-primary-600 group-hover:border-white group-hover:text-white ring-theme-background duration-200 emotion-cache-3q6q5z"
                            >
                              <div
                                class="emotion-cache-v0ob3f"
                                height="16"
                                width="16"
                              >
                                <svg>
                                  plus.svg
                                </svg>
                              </div>
                            </div>
                          </div>
                          <span
                            class="mt-3 max-w-32 truncate font-semibold text-theme-primary-600 transition-colors group-hover:text-white"
                          >
                            Create
                          </span>
                        </div>
                        <div
                          class="absolute -top-1 -right-1 m-4 flex items-center space-x-1"
                        />
                      </button>
                    </div>
                  </div>
                </div>
                <p
                  class="mt-8 text-base text-theme-secondary-text md:mt-16"
                >
                  <span>
                    Exported a Profile before? 
                  </span>
                  <a
                    class="ring-focus group inline-block emotion-cache-15tcy38"
                    data-ring-focus-margin="-m-1"
                    data-testid="Link"
                    href="#/profiles/import"
                  >
                    <span
                      class="emotion-cache-1y2194z"
                    >
                      Import it here.
                    </span>
                  </a>
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`App should render application error if the app fails to boot 1`] = `
<DocumentFragment>
  <main
    class="light"
    data-testid="Main"
  >
    <div
      class="css-1v4rx69"
    >
      <nav
        aria-labelledby="main menu"
        class="css-97i12m"
      >
        <div
          class="relative flex h-21"
        >
          <div
            class="flex flex-1 px-8 sm:ml-12"
          >
            <div
              class="my-auto flex items-center"
            >
              <button
                class="my-auto mr-4 flex h-11 w-11 cursor-pointer items-center justify-center rounded-xl bg-theme-primary-600 text-white outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
                data-testid="NavigationBarLogo--button"
                type="button"
              >
                <span
                  class="relative"
                >
                  <svg
                    height="28"
                  >
                    payvo-logo.svg
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </nav>
      <div
        class="flex flex-1 flex-col"
      >
        <div
          class="flex flex-1 flex-col justify-center text-center css-ycib48"
        >
          <div
            class="mx-auto px-8 md:px-10 lg:container"
          >
            <div
              class="mx-auto flex w-full max-w-xs justify-center"
            >
              <svg>
                generic-error-light-navy.svg
              </svg>
            </div>
            <div
              class="mt-8"
              data-testid="ApplicationError__text"
            >
              <h2
                class="text-2xl font-bold"
              >
                Something went wrong
              </h2>
              <p
                class="text-theme-secondary-text"
              >
                It looks like something went wrong. Try visiting another page or reloading.
              </p>
              <p
                class="text-theme-secondary-text"
              >
                Please provide the error below when contacting support.
              </p>
            </div>
            <div
              class="mx-auto mt-8 max-w-md"
            >
              <div
                class="py-4 css-qner8f"
                disabled=""
              >
                <div
                  class="relative flex h-full flex-1"
                >
                  <textarea
                    autocomplete="off"
                    class="no-ligatures w-full border-none resize-none text-theme-secondary-text css-1nupw50"
                    data-testid="ErrorStep__errorMessage"
                    disabled=""
                    type="text"
                  >
                    failed to boot env
                  </textarea>
                </div>
              </div>
            </div>
            <div
              class="mx-auto mt-8 flex max-w-md items-center justify-center space-x-4"
            >
              <div
                class="relative"
              >
                <button
                  class="css-1jhy6v9"
                  data-testid="clipboard-button__wrapper"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Copy
                  </div>
                </button>
              </div>
              <button
                class="css-1bx0hyc"
                data-testid="ApplicationError__button--reload"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Reload
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`App should render mock 1`] = `
<DocumentFragment>
  <main
    data-testid="Main"
  >
    <div
      class="Toastify"
    />
    <div
      class="emotion-cache-0"
      data-testid="RouterView__wrapper"
    >
      <div
        class="emotion-cache-1v4rx69"
      >
        <nav
          aria-labelledby="main menu"
          class="emotion-cache-97i12m"
        >
          <div
            class="relative flex h-21"
          >
            <div
              class="flex flex-1 px-8 sm:ml-12"
            >
              <div
                class="my-auto flex items-center"
              >
                <button
                  class="my-auto mr-4 flex h-11 w-11 cursor-pointer items-center justify-center rounded-xl bg-theme-primary-600 text-white outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
                  data-testid="NavigationBarLogo--button"
                  type="button"
                >
                  <span
                    class="relative"
                  >
                    <svg
                      height="28"
                    >
                      payvo-logo.svg
                    </svg>
                  </span>
                </button>
                <span
                  class="text-lg uppercase"
                >
                  <strong>
                    ARK
                  </strong>
                  Vault
                </span>
              </div>
            </div>
          </div>
        </nav>
        <div
          class="flex flex-1 flex-col"
        >
          <div
            class="-mt-5 flex flex-1 flex-col text-center md:mt-0 md:justify-center emotion-cache-ycib48"
          >
            <div
              class="mx-auto px-8 md:px-10 lg:container"
            >
              <div
                class="mx-auto hidden w-96 md:block"
              >
                <svg>
                  welcome-banner-light.svg
                </svg>
              </div>
              <div
                class="mx-auto md:mt-8"
              >
                <h2
                  class="mx-4 text-2xl font-bold"
                >
                  Select Profile
                </h2>
                <p
                  class="text-base text-theme-secondary-text"
                >
                  Choose from an existing Profile below or create a new Profile to get started.
                </p>
                <div
                  class="mt-6 flex justify-center md:mt-8"
                >
                  <div
                    class="gap-5 md:grid-cols-3 grid grid-cols-2"
                  >
                    <div
                      class="h-40 w-36 leading-tight sm:w-40"
                    >
                      <button
                        class="emotion-cache-116zvw2"
                        data-testid="Card"
                        type="button"
                      >
                        <div
                          class="mx-auto flex h-full flex-col items-center justify-center"
                        >
                          <div
                            class="relative"
                          >
                            <div
                              class="shrink-0 emotion-cache-11ohc3q"
                              data-testid="Avatar"
                            >
                              <div
                                class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                              >
                                <img
                                  alt="John Doe"
                                  data-testid="ProfileAvatar__svg"
                                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                                  title="John Doe"
                                />
                                <span
                                  class="absolute font-semibold text-white"
                                >
                                  JO
                                </span>
                              </div>
                            </div>
                          </div>
                          <span
                            class="text-theme-primary-text mt-3 max-w-32 truncate font-semibold"
                          >
                            John Doe
                          </span>
                        </div>
                        <div
                          class="absolute -top-1 -right-1 m-4 flex items-center space-x-1"
                        >
                          <div
                            class="static sm:relative"
                          >
                            <span
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="flex w-4 justify-center overflow-hidden"
                              >
                                <div
                                  class="cursor-pointer p-1 text-theme-primary-300 transition-colors duration-200 hover:text-theme-primary-400 dark:text-theme-secondary-600 dark:hover:text-theme-secondary-200 emotion-cache-1i4b0eq"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    ellipsis-vertical.svg
                                  </svg>
                                </div>
                              </div>
                            </span>
                          </div>
                        </div>
                      </button>
                    </div>
                    <div
                      class="h-40 w-36 leading-tight sm:w-40"
                    >
                      <button
                        class="emotion-cache-116zvw2"
                        data-testid="Card"
                        type="button"
                      >
                        <div
                          class="mx-auto flex h-full flex-col items-center justify-center"
                        >
                          <div
                            class="relative"
                          >
                            <div
                              class="shrink-0 emotion-cache-11ohc3q"
                              data-testid="Avatar"
                            >
                              <div
                                class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                              >
                                <img
                                  alt="Jane Doe"
                                  data-testid="ProfileAvatar__svg"
                                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(233, 30, 99)\\"/><circle r=\\"60\\" cx=\\"50\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"30\\" fill=\\"rgb(63, 81, 181)\\"/></svg>"
                                  title="Jane Doe"
                                />
                                <span
                                  class="absolute font-semibold text-white"
                                >
                                  JA
                                </span>
                              </div>
                            </div>
                            <span
                              class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent mr-2 mb-2 border-theme-background bg-theme-background text-theme-secondary-900 dark:text-theme-secondary-600 emotion-cache-1jfmq7q"
                            >
                              <div
                                class="emotion-cache-1i4b0eq"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  lock.svg
                                </svg>
                              </div>
                              <span />
                            </span>
                          </div>
                          <span
                            class="text-theme-primary-text mt-3 max-w-32 truncate font-semibold"
                          >
                            Jane Doe
                          </span>
                        </div>
                        <div
                          class="absolute -top-1 -right-1 m-4 flex items-center space-x-1"
                        >
                          <div
                            class="static sm:relative"
                          >
                            <span
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="flex w-4 justify-center overflow-hidden"
                              >
                                <div
                                  class="cursor-pointer p-1 text-theme-primary-300 transition-colors duration-200 hover:text-theme-primary-400 dark:text-theme-secondary-600 dark:hover:text-theme-secondary-200 emotion-cache-1i4b0eq"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    ellipsis-vertical.svg
                                  </svg>
                                </div>
                              </div>
                            </span>
                          </div>
                        </div>
                      </button>
                    </div>
                    <div
                      class="group h-40 leading-tight sm:w-40 w-36"
                    >
                      <button
                        class="emotion-cache-10zh490"
                        data-testid="Card"
                        type="button"
                      >
                        <div
                          class="mx-auto flex h-full flex-col items-center justify-center"
                        >
                          <div>
                            <div
                              class="border-theme-primary-600 text-theme-primary-600 group-hover:border-white group-hover:text-white ring-theme-background duration-200 emotion-cache-3q6q5z"
                            >
                              <div
                                class="emotion-cache-v0ob3f"
                                height="16"
                                width="16"
                              >
                                <svg>
                                  plus.svg
                                </svg>
                              </div>
                            </div>
                          </div>
                          <span
                            class="mt-3 max-w-32 truncate font-semibold text-theme-primary-600 transition-colors group-hover:text-white"
                          >
                            Create
                          </span>
                        </div>
                        <div
                          class="absolute -top-1 -right-1 m-4 flex items-center space-x-1"
                        />
                      </button>
                    </div>
                  </div>
                </div>
                <p
                  class="mt-8 text-base text-theme-secondary-text md:mt-16"
                >
                  <span>
                    Exported a Profile before? 
                  </span>
                  <a
                    class="ring-focus group inline-block emotion-cache-15tcy38"
                    data-ring-focus-margin="-m-1"
                    data-testid="Link"
                    href="#/profiles/import"
                  >
                    <span
                      class="emotion-cache-1y2194z"
                    >
                      Import it here.
                    </span>
                  </a>
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`App should render page skeleton 1`] = `
<DocumentFragment>
  <main
    data-testid="Main"
  >
    <div
      class="Toastify"
    />
    <div
      class="emotion-cache-0"
      data-testid="RouterView__wrapper"
    >
      <div
        class="emotion-cache-1v4rx69"
      >
        <nav
          aria-labelledby="main menu"
          class="emotion-cache-97i12m"
        >
          <div
            class="relative flex h-21"
          >
            <div
              class="flex flex-1 px-8 sm:ml-12"
            >
              <div
                class="my-auto flex items-center"
              >
                <button
                  class="my-auto mr-4 flex h-11 w-11 cursor-pointer items-center justify-center rounded-xl bg-theme-primary-600 text-white outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
                  data-testid="NavigationBarLogo--button"
                  type="button"
                >
                  <span
                    class="relative"
                  >
                    <svg
                      height="28"
                    >
                      payvo-logo.svg
                    </svg>
                  </span>
                </button>
                <span
                  class="text-lg uppercase"
                >
                  <strong>
                    ARK
                  </strong>
                  Vault
                </span>
              </div>
            </div>
          </div>
        </nav>
        <div
          class="flex flex-1 flex-col"
        >
          <div
            class="-mt-5 flex flex-1 flex-col text-center md:mt-0 md:justify-center emotion-cache-ycib48"
          >
            <div
              class="mx-auto px-8 md:px-10 lg:container"
            >
              <div
                class="mx-auto hidden w-96 md:block"
              >
                <svg>
                  welcome-banner-light.svg
                </svg>
              </div>
              <div
                class="mx-auto md:mt-8"
              >
                <h2
                  class="mx-4 text-2xl font-bold"
                >
                  Select Profile
                </h2>
                <p
                  class="text-base text-theme-secondary-text"
                >
                  Choose from an existing Profile below or create a new Profile to get started.
                </p>
                <div
                  class="mt-6 flex justify-center md:mt-8"
                >
                  <div
                    class="gap-5 md:grid-cols-3 grid grid-cols-2"
                  >
                    <div
                      class="h-40 w-36 leading-tight sm:w-40"
                    >
                      <button
                        class="emotion-cache-116zvw2"
                        data-testid="Card"
                        type="button"
                      >
                        <div
                          class="mx-auto flex h-full flex-col items-center justify-center"
                        >
                          <div
                            class="relative"
                          >
                            <div
                              class="shrink-0 emotion-cache-11ohc3q"
                              data-testid="Avatar"
                            >
                              <div
                                class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                              >
                                <img
                                  alt="John Doe"
                                  data-testid="ProfileAvatar__svg"
                                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                                  title="John Doe"
                                />
                                <span
                                  class="absolute font-semibold text-white"
                                >
                                  JO
                                </span>
                              </div>
                            </div>
                          </div>
                          <span
                            class="text-theme-primary-text mt-3 max-w-32 truncate font-semibold"
                          >
                            John Doe
                          </span>
                        </div>
                        <div
                          class="absolute -top-1 -right-1 m-4 flex items-center space-x-1"
                        >
                          <div
                            class="static sm:relative"
                          >
                            <span
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="flex w-4 justify-center overflow-hidden"
                              >
                                <div
                                  class="cursor-pointer p-1 text-theme-primary-300 transition-colors duration-200 hover:text-theme-primary-400 dark:text-theme-secondary-600 dark:hover:text-theme-secondary-200 emotion-cache-1i4b0eq"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    ellipsis-vertical.svg
                                  </svg>
                                </div>
                              </div>
                            </span>
                          </div>
                        </div>
                      </button>
                    </div>
                    <div
                      class="h-40 w-36 leading-tight sm:w-40"
                    >
                      <button
                        class="emotion-cache-116zvw2"
                        data-testid="Card"
                        type="button"
                      >
                        <div
                          class="mx-auto flex h-full flex-col items-center justify-center"
                        >
                          <div
                            class="relative"
                          >
                            <div
                              class="shrink-0 emotion-cache-11ohc3q"
                              data-testid="Avatar"
                            >
                              <div
                                class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                              >
                                <img
                                  alt="Jane Doe"
                                  data-testid="ProfileAvatar__svg"
                                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(233, 30, 99)\\"/><circle r=\\"60\\" cx=\\"50\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"30\\" fill=\\"rgb(63, 81, 181)\\"/></svg>"
                                  title="Jane Doe"
                                />
                                <span
                                  class="absolute font-semibold text-white"
                                >
                                  JA
                                </span>
                              </div>
                            </div>
                            <span
                              class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent mr-2 mb-2 border-theme-background bg-theme-background text-theme-secondary-900 dark:text-theme-secondary-600 emotion-cache-1jfmq7q"
                            >
                              <div
                                class="emotion-cache-1i4b0eq"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  lock.svg
                                </svg>
                              </div>
                              <span />
                            </span>
                          </div>
                          <span
                            class="text-theme-primary-text mt-3 max-w-32 truncate font-semibold"
                          >
                            Jane Doe
                          </span>
                        </div>
                        <div
                          class="absolute -top-1 -right-1 m-4 flex items-center space-x-1"
                        >
                          <div
                            class="static sm:relative"
                          >
                            <span
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="flex w-4 justify-center overflow-hidden"
                              >
                                <div
                                  class="cursor-pointer p-1 text-theme-primary-300 transition-colors duration-200 hover:text-theme-primary-400 dark:text-theme-secondary-600 dark:hover:text-theme-secondary-200 emotion-cache-1i4b0eq"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    ellipsis-vertical.svg
                                  </svg>
                                </div>
                              </div>
                            </span>
                          </div>
                        </div>
                      </button>
                    </div>
                    <div
                      class="group h-40 leading-tight sm:w-40 w-36"
                    >
                      <button
                        class="emotion-cache-10zh490"
                        data-testid="Card"
                        type="button"
                      >
                        <div
                          class="mx-auto flex h-full flex-col items-center justify-center"
                        >
                          <div>
                            <div
                              class="border-theme-primary-600 text-theme-primary-600 group-hover:border-white group-hover:text-white ring-theme-background duration-200 emotion-cache-3q6q5z"
                            >
                              <div
                                class="emotion-cache-v0ob3f"
                                height="16"
                                width="16"
                              >
                                <svg>
                                  plus.svg
                                </svg>
                              </div>
                            </div>
                          </div>
                          <span
                            class="mt-3 max-w-32 truncate font-semibold text-theme-primary-600 transition-colors group-hover:text-white"
                          >
                            Create
                          </span>
                        </div>
                        <div
                          class="absolute -top-1 -right-1 m-4 flex items-center space-x-1"
                        />
                      </button>
                    </div>
                  </div>
                </div>
                <p
                  class="mt-8 text-base text-theme-secondary-text md:mt-16"
                >
                  <span>
                    Exported a Profile before? 
                  </span>
                  <a
                    class="ring-focus group inline-block emotion-cache-15tcy38"
                    data-ring-focus-margin="-m-1"
                    data-testid="Link"
                    href="#/profiles/import"
                  >
                    <span
                      class="emotion-cache-1y2194z"
                    >
                      Import it here.
                    </span>
                  </a>
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`App should render the offline screen if there is no internet connection 1`] = `
<DocumentFragment>
  <main
    data-testid="Main"
  >
    <div
      class="Toastify"
    />
    <div
      class="emotion-cache-1v4rx69"
    >
      <nav
        aria-labelledby="main menu"
        class="emotion-cache-97i12m"
      >
        <div
          class="relative flex h-21"
        >
          <div
            class="flex flex-1 px-8 sm:ml-12"
          >
            <div
              class="my-auto flex items-center"
            >
              <button
                class="my-auto mr-4 flex h-11 w-11 cursor-pointer items-center justify-center rounded-xl bg-theme-primary-600 text-white outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
                data-testid="NavigationBarLogo--button"
                type="button"
              >
                <span
                  class="relative"
                >
                  <svg
                    height="28"
                  >
                    payvo-logo.svg
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </nav>
      <div
        class="flex flex-1 flex-col"
      >
        <div
          class="flex flex-1 flex-col justify-center text-center emotion-cache-ycib48"
        >
          <div
            class="mx-auto px-8 md:px-10 lg:container"
          >
            <div
              class="mx-auto flex w-full max-w-xs justify-center"
            >
              <svg>
                connection-error-light-navy.svg
              </svg>
            </div>
            <div
              class="mt-8"
              data-testid="Offline__text"
            >
              <h2
                class="text-2xl font-bold"
              >
                Cannot Connect
              </h2>
              <p
                class="text-theme-secondary-text"
              >
                Check your internet connection if it doesn't work, check it again.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`App should render welcome screen after page skeleton 1`] = `
<DocumentFragment>
  <main
    data-testid="Main"
  >
    <div
      class="Toastify"
    />
    <div
      class="emotion-cache-0"
      data-testid="RouterView__wrapper"
    >
      <div
        class="emotion-cache-1v4rx69"
      >
        <nav
          aria-labelledby="main menu"
          class="emotion-cache-97i12m"
        >
          <div
            class="relative flex h-21"
          >
            <div
              class="flex flex-1 px-8 sm:ml-12"
            >
              <div
                class="my-auto flex items-center"
              >
                <button
                  class="my-auto mr-4 flex h-11 w-11 cursor-pointer items-center justify-center rounded-xl bg-theme-primary-600 text-white outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
                  data-testid="NavigationBarLogo--button"
                  type="button"
                >
                  <span
                    class="relative"
                  >
                    <svg
                      height="28"
                    >
                      payvo-logo.svg
                    </svg>
                  </span>
                </button>
                <span
                  class="text-lg uppercase"
                >
                  <strong>
                    ARK
                  </strong>
                  Vault
                </span>
              </div>
            </div>
          </div>
        </nav>
        <div
          class="flex flex-1 flex-col"
        >
          <div
            class="-mt-5 flex flex-1 flex-col text-center md:mt-0 md:justify-center emotion-cache-ycib48"
          >
            <div
              class="mx-auto px-8 md:px-10 lg:container"
            >
              <div
                class="mx-auto hidden w-96 md:block"
              >
                <svg>
                  welcome-banner-light.svg
                </svg>
              </div>
              <div
                class="mx-auto md:mt-8"
              >
                <h2
                  class="mx-4 text-2xl font-bold"
                >
                  Select Profile
                </h2>
                <p
                  class="text-base text-theme-secondary-text"
                >
                  Choose from an existing Profile below or create a new Profile to get started.
                </p>
                <div
                  class="mt-6 flex justify-center md:mt-8"
                >
                  <div
                    class="gap-5 md:grid-cols-3 grid grid-cols-2"
                  >
                    <div
                      class="h-40 w-36 leading-tight sm:w-40"
                    >
                      <button
                        class="emotion-cache-116zvw2"
                        data-testid="Card"
                        type="button"
                      >
                        <div
                          class="mx-auto flex h-full flex-col items-center justify-center"
                        >
                          <div
                            class="relative"
                          >
                            <div
                              class="shrink-0 emotion-cache-11ohc3q"
                              data-testid="Avatar"
                            >
                              <div
                                class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                              >
                                <img
                                  alt="John Doe"
                                  data-testid="ProfileAvatar__svg"
                                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                                  title="John Doe"
                                />
                                <span
                                  class="absolute font-semibold text-white"
                                >
                                  JO
                                </span>
                              </div>
                            </div>
                          </div>
                          <span
                            class="text-theme-primary-text mt-3 max-w-32 truncate font-semibold"
                          >
                            John Doe
                          </span>
                        </div>
                        <div
                          class="absolute -top-1 -right-1 m-4 flex items-center space-x-1"
                        >
                          <div
                            class="static sm:relative"
                          >
                            <span
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="flex w-4 justify-center overflow-hidden"
                              >
                                <div
                                  class="cursor-pointer p-1 text-theme-primary-300 transition-colors duration-200 hover:text-theme-primary-400 dark:text-theme-secondary-600 dark:hover:text-theme-secondary-200 emotion-cache-1i4b0eq"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    ellipsis-vertical.svg
                                  </svg>
                                </div>
                              </div>
                            </span>
                          </div>
                        </div>
                      </button>
                    </div>
                    <div
                      class="h-40 w-36 leading-tight sm:w-40"
                    >
                      <button
                        class="emotion-cache-116zvw2"
                        data-testid="Card"
                        type="button"
                      >
                        <div
                          class="mx-auto flex h-full flex-col items-center justify-center"
                        >
                          <div
                            class="relative"
                          >
                            <div
                              class="shrink-0 emotion-cache-11ohc3q"
                              data-testid="Avatar"
                            >
                              <div
                                class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                              >
                                <img
                                  alt="Jane Doe"
                                  data-testid="ProfileAvatar__svg"
                                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(233, 30, 99)\\"/><circle r=\\"60\\" cx=\\"50\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"30\\" fill=\\"rgb(63, 81, 181)\\"/></svg>"
                                  title="Jane Doe"
                                />
                                <span
                                  class="absolute font-semibold text-white"
                                >
                                  JA
                                </span>
                              </div>
                            </div>
                            <span
                              class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent mr-2 mb-2 border-theme-background bg-theme-background text-theme-secondary-900 dark:text-theme-secondary-600 emotion-cache-1jfmq7q"
                            >
                              <div
                                class="emotion-cache-1i4b0eq"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  lock.svg
                                </svg>
                              </div>
                              <span />
                            </span>
                          </div>
                          <span
                            class="text-theme-primary-text mt-3 max-w-32 truncate font-semibold"
                          >
                            Jane Doe
                          </span>
                        </div>
                        <div
                          class="absolute -top-1 -right-1 m-4 flex items-center space-x-1"
                        >
                          <div
                            class="static sm:relative"
                          >
                            <span
                              data-testid="dropdown__toggle"
                            >
                              <div
                                class="flex w-4 justify-center overflow-hidden"
                              >
                                <div
                                  class="cursor-pointer p-1 text-theme-primary-300 transition-colors duration-200 hover:text-theme-primary-400 dark:text-theme-secondary-600 dark:hover:text-theme-secondary-200 emotion-cache-1i4b0eq"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    ellipsis-vertical.svg
                                  </svg>
                                </div>
                              </div>
                            </span>
                          </div>
                        </div>
                      </button>
                    </div>
                    <div
                      class="group h-40 leading-tight sm:w-40 w-36"
                    >
                      <button
                        class="emotion-cache-10zh490"
                        data-testid="Card"
                        type="button"
                      >
                        <div
                          class="mx-auto flex h-full flex-col items-center justify-center"
                        >
                          <div>
                            <div
                              class="border-theme-primary-600 text-theme-primary-600 group-hover:border-white group-hover:text-white ring-theme-background duration-200 emotion-cache-3q6q5z"
                            >
                              <div
                                class="emotion-cache-v0ob3f"
                                height="16"
                                width="16"
                              >
                                <svg>
                                  plus.svg
                                </svg>
                              </div>
                            </div>
                          </div>
                          <span
                            class="mt-3 max-w-32 truncate font-semibold text-theme-primary-600 transition-colors group-hover:text-white"
                          >
                            Create
                          </span>
                        </div>
                        <div
                          class="absolute -top-1 -right-1 m-4 flex items-center space-x-1"
                        />
                      </button>
                    </div>
                  </div>
                </div>
                <p
                  class="mt-8 text-base text-theme-secondary-text md:mt-16"
                >
                  <span>
                    Exported a Profile before? 
                  </span>
                  <a
                    class="ring-focus group inline-block emotion-cache-15tcy38"
                    data-ring-focus-margin="-m-1"
                    data-testid="Link"
                    href="#/profiles/import"
                  >
                    <span
                      class="emotion-cache-1y2194z"
                    >
                      Import it here.
                    </span>
                  </a>
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;
